--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Gadot Dev.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Gadot Dev.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1000"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-               BuildableName = "Ashdod Live.app"
-               BlueprintName = "Ashdod Live"
+               BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
+               BuildableName = "Gadot Dev.app"
+               BlueprintName = "Gadot Dev"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Ashdod Live.app"
-            BlueprintName = "Ashdod Live"
+            BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
+            BuildableName = "Gadot Dev.app"
+            BlueprintName = "Gadot Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,29 +55,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Ashdod Live.app"
-            BlueprintName = "Ashdod Live"
+            BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
+            BuildableName = "Gadot Dev.app"
+            BlueprintName = "Gadot Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "DYLD_PRINT_STATISTICS"
-            value = "1"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "DISABLE_API_LOG"
-            value = "false"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "SERVER"
-            value = "https://apigw2.seldatdirect.com/dev/dms-customization/api/"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
          <AdditionalOption
             key = "MallocStackLogging"
@@ -101,9 +84,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Ashdod Live.app"
-            BlueprintName = "Ashdod Live"
+            BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
+            BuildableName = "Gadot Dev.app"
+            BlueprintName = "Gadot Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -112,7 +95,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
