--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Gadot Live.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Gadot Live.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-               BuildableName = "Ashdod Dev.app"
-               BlueprintName = "Ashdod Dev"
+               BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
+               BuildableName = "Gadot Live.app"
+               BlueprintName = "Gadot Live"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Ashdod Dev.app"
-            BlueprintName = "Ashdod Dev"
+            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
+            BuildableName = "Gadot Live.app"
+            BlueprintName = "Gadot Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,12 +55,29 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Ashdod Dev.app"
-            BlueprintName = "Ashdod Dev"
+            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
+            BuildableName = "Gadot Live.app"
+            BlueprintName = "Gadot Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "DYLD_PRINT_STATISTICS"
+            value = "1"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "DISABLE_API_LOG"
+            value = "false"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "SERVER"
+            value = "https://apigw2.seldatdirect.com/dev/dms-customization/api/"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
          <AdditionalOption
             key = "MallocStackLogging"
@@ -84,9 +101,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Ashdod Dev.app"
-            BlueprintName = "Ashdod Dev"
+            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
+            BuildableName = "Gadot Live.app"
+            BlueprintName = "Gadot Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -95,7 +112,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
