--- a/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>529725101417-qk9qe68slktrq3a03eg872qgnk6sf353.apps.googleusercontent.com</string>
+	<string>1008983819092-5fjguqphgngui5ias19pncgfhv3g7j0f.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.529725101417-qk9qe68slktrq3a03eg872qgnk6sf353</string>
+	<string>com.googleusercontent.apps.1008983819092-5fjguqphgngui5ias19pncgfhv3g7j0f</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBJfixjfkhgTUqXq9vDgN9zRLAFXV5IGLg</string>
+	<string>AIzaSyCsliMbU91SYs7GdA80_P99uIIWJaQUO0U</string>
 	<key>GCM_SENDER_ID</key>
-	<string>529725101417</string>
+	<string>1008983819092</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.dms.core</string>
+	<string>com.seldatinc.solocate.gadot.debug</string>
 	<key>PROJECT_ID</key>
-	<string>solocate-dev-9cb2b</string>
+	<string>solocate-gadot</string>
 	<key>STORAGE_BUCKET</key>
-	<string>solocate-dev-9cb2b.appspot.com</string>
+	<string>solocate-gadot.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:529725101417:ios:16a73dddf5bbf381</string>
+	<string>1:1008983819092:ios:d9cec90d5270f2820b3ec1</string>
 	<key>DATABASE_URL</key>
-	<string>https://solocate-dev-9cb2b.firebaseio.com</string>
+	<string>https://solocate-gadot.firebaseio.com</string>
 </dict>
 </plist>
