fixed issue - created location manager in background thread

--- a/DMSDriver/DMSDriver/Supporting Files/Dev-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Dev-Info.plist
@@ -23,11 +23,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.0</string>
+	<string>0.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>What will be shown?</string>
 	<key>CFBundleVersion</key>
-	<string>25</string>
+	<string>1</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -103,6 +103,8 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>To tracking orders, get navigation,traffic,and transit updates,and see info about places near you,choose Allways Allow</string>
 	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To tracking orders, get navigation,traffic,and transit updates,and see info about places near you,choose Allways Allow</string>
+	<key>NSLocationUsageDescription</key>
 	<string>To tracking orders, get navigation,traffic,and transit updates,and see info about places near you,choose Allways Allow</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To tracking orders, get navigation,traffic,and transit updates,and see info about places near you,choose Allways Allow</string>
