--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL_DEV</key>
-	<string>https://apigw-live3.seldatdirect.com/dev/ashdodb/solocate/api/</string>
+	<string>https://apigw-live3.seldatdirect.com/dev/dms/gadot/api/</string>
 	<key>BASE_URL_STAGING</key>
 	<string>https://apigw-live3.seldatdirect.com/staging/ashdodb/solocate/api/</string>
 	<key>BASE_URL_DEMO</key>
