--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -9,7 +9,7 @@
 	<key>BASE_URL_DEMO</key>
 	<string>https://apigw-live3.seldatdirect.com/demo/ashdodb/solocate/api/</string>
 	<key>BASE_URL_QC</key>
-	<string>https://apigw-live3.seldatdirect.com/qc/ashdodb/solocate/api/</string>
+	<string>https://apigw-live3.seldatdirect.com/qc/dms/gadot/api/</string>
 	<key>BASE_URL_PRODUCT</key>
 	<string>https://apigw2.seldatdirect.com/live/dms-customization/api/</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
