--- a/DMSDriver/DMSDriver/Supporting Files/Dev-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Dev-Info.plist
@@ -85,7 +85,7 @@
 				<key>NSIncludesSubdomains</key>
 				<true/>
 			</dict>
-			<key>solocate.ashdodb.dev.seldatdirect.com</key>
+			<key>dms.gadot.dev.seldatdirect.com</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
@@ -96,6 +96,17 @@
 				<key>NSIncludesSubdomains</key>
 				<true/>
 			</dict>
+            <key>dms.gadot.qc.seldatdirect.com</key>
+            <dict>
+                <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSExceptionMinimumTLSVersion</key>
+                <string>TLSv1.0</string>
+                <key>NSExceptionRequiresForwardSecrecy</key>
+                <true/>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+            </dict>
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
