--- a/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1008983819092-5fjguqphgngui5ias19pncgfhv3g7j0f.apps.googleusercontent.com</string>
+	<string>449387755237-7m2pgdij6uvtjl3of4to6tugsjb7ufnm.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1008983819092-5fjguqphgngui5ias19pncgfhv3g7j0f</string>
+	<string>com.googleusercontent.apps.449387755237-7m2pgdij6uvtjl3of4to6tugsjb7ufnm</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCsliMbU91SYs7GdA80_P99uIIWJaQUO0U</string>
+	<string>AIzaSyC8o0vW-IVQTmpfLti3z--wRiO97dZuLCk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1008983819092</string>
+	<string>449387755237</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.solocate.gadot.debug</string>
+	<string>com.seldatinc.solocate.core</string>
 	<key>PROJECT_ID</key>
-	<string>solocate-gadot</string>
+	<string>solocate-core</string>
 	<key>STORAGE_BUCKET</key>
-	<string>solocate-gadot.appspot.com</string>
+	<string>solocate-core.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1008983819092:ios:d9cec90d5270f2820b3ec1</string>
+	<string>1:449387755237:ios:ace0b3b582cff160a0c60c</string>
 	<key>DATABASE_URL</key>
-	<string>https://solocate-gadot.firebaseio.com</string>
+	<string>https://solocate-core.firebaseio.com</string>
 </dict>
 </plist>
