--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Core.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Core.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-               BuildableName = "Solocate Core.app"
+               BuildableName = "Solocate Orgit.app"
                BlueprintName = "Solocate Core"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
@@ -27,19 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Solocate Core.app"
+            BuildableName = "Solocate Orgit.app"
             BlueprintName = "Solocate Core"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -56,7 +54,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Solocate Core.app"
+            BuildableName = "Solocate Orgit.app"
             BlueprintName = "Solocate Core"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
@@ -85,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Solocate Core.app"
+            BuildableName = "Solocate Orgit.app"
             BlueprintName = "Solocate Core"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
