Live and Staging configuration

--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Orgit Live.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Orgit Live.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-               BuildableName = "Gadot Live.app"
-               BlueprintName = "Gadot Live"
+               BuildableName = "Solocate Orgit.app"
+               BlueprintName = "Solocate Orgit Live"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,19 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Gadot Live.app"
-            BlueprintName = "Gadot Live"
+            BuildableName = "Solocate Orgit.app"
+            BlueprintName = "Solocate Orgit Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -56,8 +54,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Gadot Live.app"
-            BlueprintName = "Gadot Live"
+            BuildableName = "Solocate Orgit.app"
+            BlueprintName = "Solocate Orgit Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -102,8 +100,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Gadot Live.app"
-            BlueprintName = "Gadot Live"
+            BuildableName = "Solocate Orgit.app"
+            BlueprintName = "Solocate Orgit Live"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
