--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Orgit.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Orgit.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
                BuildableName = "Solocate Orgit.app"
-               BlueprintName = "Solocate Core"
+               BlueprintName = "Solocate Orgit"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,7 +32,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
             BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Core"
+            BlueprintName = "Solocate Orgit"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,7 +55,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
             BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Core"
+            BlueprintName = "Solocate Orgit"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -84,7 +84,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
             BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Core"
+            BlueprintName = "Solocate Orgit"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
