--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -5,13 +5,13 @@
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.orgit.seldatdirect.com/dev/solocate-core/api/</string>
 	<key>BASE_URL_STAGING</key>
-	<string>https://apigw-live3.seldatdirect.com/staging/dms/gadot/api/</string>
+	<string>https://apigw.orgit.seldatdirect.com/staging/solocate-core/api/</string>
 	<key>BASE_URL_DEMO</key>
 	<string>https://apigw-live3.seldatdirect.com/demo/ashdodb/solocate/api/</string>
 	<key>BASE_URL_QC</key>
 	<string>https://apigw.orgit.seldatdirect.com/qc/solocate-core/api/</string>
 	<key>BASE_URL_PRODUCT</key>
-	<string>https://apigw2.seldatdirect.com/live/dms-customization/api/</string>
+	<string>https://apigw.orgit.seldatdirect.com/live/solocate-core/api/</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
 	<key>TrackingTimeInterval</key>
