Staging Live - update socket configuration

--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-               BuildableName = "Solocate Orgit.app"
-               BlueprintName = "Solocate Orgit Live"
+               BuildableName = "Solocate.app"
+               BlueprintName = "Solocate"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -31,8 +31,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Orgit Live"
+            BuildableName = "Solocate.app"
+            BlueprintName = "Solocate"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -54,8 +54,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Orgit Live"
+            BuildableName = "Solocate.app"
+            BlueprintName = "Solocate"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -100,8 +100,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Orgit Live"
+            BuildableName = "Solocate.app"
+            BlueprintName = "Solocate"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
