--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Dev.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/Solocate Dev.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-               BuildableName = "Solocate Orgit.app"
-               BlueprintName = "Solocate Orgit"
+               BuildableName = "Solocate Dev.app"
+               BlueprintName = "Solocate Dev"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -31,8 +31,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Orgit"
+            BuildableName = "Solocate Dev.app"
+            BlueprintName = "Solocate Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -54,8 +54,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Orgit"
+            BuildableName = "Solocate Dev.app"
+            BlueprintName = "Solocate Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -83,8 +83,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2A443A2C22648C5A00CB6508"
-            BuildableName = "Solocate Orgit.app"
-            BlueprintName = "Solocate Orgit"
+            BuildableName = "Solocate Dev.app"
+            BlueprintName = "Solocate Dev"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
